--- a/frontend/src/styles/HeadTitle.css
+++ b/frontend/src/styles/HeadTitle.css
@@ -1,12 +1,11 @@
 .bg-head {
-    /*pointer-events: none;*/
     width: 100%;
-    height: 431px;
+    min-height: min-content;
     background: #F6F9FF;
-    margin-top: -30px;
 }
 
 .text {
+    padding-top: 2%;
     color: rgba(69, 69, 69, 1);
     font-style: normal;
     font-family: Montserrat Alternates, serif;
@@ -17,7 +16,7 @@
 }
 
 .title {
-    position: relative;
+    /*position: relative;*/
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -30,16 +29,13 @@
     font-size: 45px;
     line-height: 60px;
     /* or 133% */
-
     text-align: center;
     letter-spacing: 0.199792px;
-
     color: #458CFE;
 }
 
 .text-explanation {
     pointer-events: auto;
-    position: absolute;
     left: 29.42%;
     right: 29.83%;
     top: 260px;
@@ -51,6 +47,7 @@
     font-size: 26px;
     line-height: 30px;
     /* or 115% */
+    padding: 4% 30% 3%;
 
     text-align: center;
     letter-spacing: 0.199792px;
@@ -63,7 +60,6 @@
 }
 
 .rectangle {
-    position: relative;
     width: 92px;
     height: 9px;
     top: 65px;
