--- a/frontend/src/styles/Max.css
+++ b/frontend/src/styles/Max.css
@@ -1,6 +1,5 @@
 .max-bg {
     display: flex;
-    /*pointer-events: auto;*/
     z-index: 48;
     background: #F6F6F6;
     border: 1px solid #E8E8E8;
@@ -11,13 +10,13 @@
     border-radius: 18px;
     height: 50px;
     width: 368px;
+    max-width: 85%;
     margin-top: 50px;
 }
 
 .max-input {
     position: relative;
     z-index: 49;
-    /*pointer-events: auto;*/
     background: transparent;
     border-color: transparent;
     padding-right: 3px;
