--- a/frontend/src/styles/TextArea.css
+++ b/frontend/src/styles/TextArea.css
@@ -1,9 +1,8 @@
 .sum-textarea {
     z-index: 11;
     width: 1028px;
-    min-width: 1028px;
-    /*height: 532px;*/
-    min-height: 532px;
+    max-width: 95%;
+    height: 532px;
     background-color: rgba(246, 249, 255, 1);
     border-radius: 33.3333px 33.3333px 33.3333px 0;
     border-color: transparent;
